force-app/main/default/objects/SBQQ__Quote__c/fields/Flow_Enterprise_Products__c.field-meta.xml
<CustomField>
    <fullName>Flow_Enterprise_Products__c</fullName>
    <label>Flow Enterprise Products</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Item_Master_Product_Number__c</field>
        <operation>equals</operation>
        <value>PIN-01069,PIN-01070,PIN-01071,PIN-01072,PIN-01075,PIN-01076,PIN-01077,PIN-01078</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Product_Code_Text__c</field>
        <operation>notEqual</operation>
        <value>FL-01071, FL-01072</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>