force-app/main/default/objects/SBQQ__Quote__c/fields/Fourth_Year_Software_Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Fourth_Year_Software_Net_Total__c</fullName>
    <description>Field is created as a part of story: BIZ-49977 to differentiate a product as prime</description>
    <label>Prime Services Credit Amount</label>
    <summarizedField>SBQQ__QuoteLine__c.One_Time_Credit__c</summarizedField>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Is_Prime__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Product_Type__c</field>
        <operation>equals</operation>
        <value>Services, Services Discount, Training</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>