force-app/main/default/objects/SBQQ__Quote__c/fields/Has_Services_Products__c.field-meta.xml
<CustomField>
    <fullName>Has_Services_Products__c</fullName>
    <formula>IF(Services_Products__c &gt; 0, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Services Products</label>
    <type>Checkbox</type>
</CustomField>