force-app/main/default/objects/SBQQ__Quote__c/fields/Has_Software_Credit_Products__c.field-meta.xml
<CustomField>
    <fullName>Has_Software_Credit_Products__c</fullName>
    <formula>IF(
  Software_Credit_Products__c &gt;1, 
  TRUE,
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Software Credit Products</label>
    <type>Checkbox</type>
</CustomField>