force-app/main/default/objects/SBQQ__Quote__c/fields/Has_Software_Products__c.field-meta.xml
<CustomField>
    <fullName>Has_Software_Products__c</fullName>
    <formula>IF(
AND(
Software_Products__c &gt;0,
Has_Trial_Product__c = FALSE
)
, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Software Products?</label>
    <type>Checkbox</type>
</CustomField>