force-app/main/default/objects/SBQQ__Quote__c/fields/IIS_quote_line_added__c.field-meta.xml
<CustomField>
    <fullName>IIS_quote_line_added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IIS quote line added</label>
    <type>Checkbox</type>
</CustomField>