force-app/main/default/objects/SBQQ__Quote__c/fields/Implementation_Services_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Services_List_Price__c</fullName>
    <label>Implementation Services List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>