force-app/main/default/objects/SBQQ__Quote__c/fields/Include_Counter_Signature__c.field-meta.xml
<CustomField>
    <fullName>Include_Counter_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field determines if the Counter Signature panel will be printed on the Quote. BIZ-47803 label change</description>
    <label>Counter Signature</label>
    <type>Checkbox</type>
</CustomField>