force-app/main/default/objects/SBQQ__Quote__c/fields/Includes_Termination_Clause__c.field-meta.xml
<CustomField>
    <fullName>Includes_Termination_Clause__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Custom field built according to US#BIZ-47145</description>
    <label>Includes Termination Clause?</label>
    <type>Checkbox</type>
</CustomField>