force-app/main/default/objects/SBQQ__Quote__c/fields/Industry_President__c.field-meta.xml
<CustomField>
    <fullName>Industry_President__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry President</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes2</relationshipName>
    <type>Lookup</type>
</CustomField>