force-app/main/default/objects/SBQQ__Quote__c/fields/Industry_Sales_Lead__c.field-meta.xml
<CustomField>
    <fullName>Industry_Sales_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Industry Sales Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes5</relationshipName>
    <type>Lookup</type>
</CustomField>