force-app/main/default/objects/SBQQ__Quote__c/fields/Initial_Term_Discount__c.field-meta.xml
<CustomField>
    <fullName>Initial_Term_Discount__c</fullName>
    <formula>IF(
ROUND(Software_List__c,2) = 0,
0,
(Software_List__c - Software_Net_Total__c)/Software_List__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initial Term Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>