force-app/main/default/objects/SBQQ__Quote__c/fields/Invoicing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoicing Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.Bill_To_Account__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Invoicing Contact)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>