force-app/main/default/objects/SBQQ__Quote__c/fields/Last_OSA_Comment__c.field-meta.xml
<CustomField>
    <fullName>Last_OSA_Comment__c</fullName>
    <label>Last OSA Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>