force-app/main/default/objects/SBQQ__Quote__c/fields/Latest_Approvers_comment__c.field-meta.xml
<CustomField>
    <fullName>Latest_Approvers_comment__c</fullName>
    <description>Biz 283</description>
    <label>Latest Approvers Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>