force-app/main/default/objects/SBQQ__Quote__c/fields/Latest_end_date_quote_formula__c.field-meta.xml
<CustomField>
    <fullName>Latest_end_date_quote_formula__c</fullName>
    <formula>DATE(
year(SBQQ__StartDate__c)
+ floor((month(SBQQ__StartDate__c) + SBQQ__SubscriptionTerm__c )/12) + if(and(month(SBQQ__StartDate__c)=12,SBQQ__SubscriptionTerm__c &gt;=12),-1,0)
,
if( mod( month(SBQQ__StartDate__c) + SBQQ__SubscriptionTerm__c , 12 ) = 0, 12 , mod( month(SBQQ__StartDate__c) + SBQQ__SubscriptionTerm__c , 12 ))
,
min(
day(SBQQ__StartDate__c),
case(
max( mod( month(SBQQ__StartDate__c) + SBQQ__SubscriptionTerm__c , 12 ) , 1),
9,30,
4,30,
6,30,
11,30,
2,28,
31
)
)
) - 1</formula>
    <label>Latest end date quote (Formula)</label>
    <type>Date</type>
</CustomField>