force-app/main/default/objects/SBQQ__Quote__c/fields/Latest_end_date_quote_lines__c.field-meta.xml
<CustomField>
    <fullName>Latest_end_date_quote_lines__c</fullName>
    <label>Latest end date quote lines</label>
    <type>Date</type>
</CustomField>