force-app/main/default/objects/SBQQ__Quote__c/fields/Legacy_Relationships_Products__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Relationships_Products__c</fullName>
    <label>Legacy Relationships Products</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Item_Master_Product_Number__c</field>
        <operation>equals</operation>
        <value>RI-01410</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>