force-app/main/default/objects/SBQQ__Quote__c/fields/License_Band_Fee_Earners__c.field-meta.xml
<CustomField>
    <fullName>License_Band_Fee_Earners__c</fullName>
    <formula>SBQQ__Account__r.License_Band_Timekeepers__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Band (Fee Earners)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>