force-app/main/default/objects/SBQQ__Quote__c/fields/License_Band_Revenue__c.field-meta.xml
<CustomField>
    <fullName>License_Band_Revenue__c</fullName>
    <formula>SBQQ__Account__r.License_Band_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Band (Revenue)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>