force-app/main/default/objects/SBQQ__Quote__c/fields/License_Basis__c.field-meta.xml
<CustomField>
    <fullName>License_Basis__c</fullName>
    <description>CR #43996</description>
    <label>Meter Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fee Earners</fullName>
            </value>
            <value>
                <fullName>Lawyers</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Named Users</fullName>
            </value>
            <value>
                <fullName>Integrations</fullName>
            </value>
            <value>
                <fullName>Employees</fullName>
            </value>
            <value>
                <fullName>Attorneys</fullName>
                <isActive>false</isActive>
                <label>Attorneys</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>