force-app/main/default/objects/SBQQ__Quote__c/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <label>Line of Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Intapp</fullName>
                <default>true</default>
                <label>Intapp</label>
            </value>
            <value>
                <fullName>DealCloud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>