force-app/main/default/objects/SBQQ__Quote__c/fields/Master_Contract_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Contract_Number__c</fullName>
    <formula>IF(
OR(
ISPICKVAL(Version__c,&quot;1&quot;),
ISPICKVAL(Version__c,&quot;&quot;)
),
SBQQ__MasterContract__r.ContractNumber,
SBQQ__MasterContract__r.ContractNumber&amp;&quot;v&quot;&amp;TEXT(Version__c)
)</formula>
    <label>Master Contract Number</label>
    <type>Text</type>
</CustomField>