force-app/main/default/objects/SBQQ__Quote__c/fields/Min_year_on_year_committed_spend__c.field-meta.xml
<CustomField>
    <fullName>Min_year_on_year_committed_spend__c</fullName>
    <description>This is part of Green Box Approval Process
BIZ-47803,BIZ-45146</description>
    <formula>if(First_Year_Software_Net_Total__c !=0 &amp;&amp; Second_Year_Software_Net_Total__c !=0 &amp;&amp; Third_Year_Software_Net_Total__c!=0,
MIN(
(Third_Year_Software_Net_Total__c-Second_Year_Software_Net_Total__c)/Second_Year_Software_Net_Total__c,
(Second_Year_Software_Net_Total__c-First_Year_Software_Net_Total__c)/First_Year_Software_Net_Total__c),
if(Third_Year_Software_Net_Total__c=0&amp;&amp; First_Year_Software_Net_Total__c !=0 &amp;&amp; Second_Year_Software_Net_Total__c !=0,
((Second_Year_Software_Net_Total__c-First_Year_Software_Net_Total__c)/First_Year_Software_Net_Total__c)
,0))</formula>
    <label>Min YoY Uplift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>