force-app/main/default/objects/SBQQ__Quote__c/fields/Min_year_on_year_committed_spend_checkbo__c.field-meta.xml
<CustomField>
    <fullName>Min_year_on_year_committed_spend_checkbo__c</fullName>
    <description>Created this field to cover the exceptional condition of approval chain</description>
    <formula>Minimum_year_approver_level__c = 3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min year on year committed spend checkbo</label>
    <type>Checkbox</type>
</CustomField>