force-app/main/default/objects/SBQQ__Quote__c/fields/MSSA_Tied_to_Other_Account__c.field-meta.xml
<CustomField>
    <fullName>MSSA_Tied_to_Other_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Shows if  MSSA tied to another Account.</description>
    <label>MSSA Tied to Other Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (MSSA tied to other Account)</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>