force-app/main/default/objects/SBQQ__Quote__c/fields/Multiyear_Deal__c.field-meta.xml
<CustomField>
    <fullName>Multiyear_Deal__c</fullName>
    <formula>IF(
  SBQQ__SubscriptionTerm__c &gt;=24, 
  TRUE, 
  FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Multiyear Deal</label>
    <type>Checkbox</type>
</CustomField>