force-app/main/default/objects/SBQQ__Quote__c/fields/New_Flow_Products__c.field-meta.xml
<CustomField>
    <fullName>New_Flow_Products__c</fullName>
    <label>New Flow Products</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Product_Code_Text__c</field>
        <operation>equals</operation>
        <value>FL-01072, FL-01071</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>