force-app/main/default/objects/SBQQ__Quote__c/fields/New_Intake_Products__c.field-meta.xml
<CustomField>
    <fullName>New_Intake_Products__c</fullName>
    <label>New Intake Products</label>
    <summaryFilterItems>
        <field>SBQQ__QuoteLine__c.Item_Master_Product_Number__c</field>
        <operation>equals</operation>
        <value>PIN-01490, PIN-01489</value>
    </summaryFilterItems>
    <summaryForeignKey>SBQQ__QuoteLine__c.SBQQ__Quote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>