force-app/main/default/objects/SBQQ__Quote__c/fields/New_OSA__c.field-meta.xml
<CustomField>
    <fullName>New_OSA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Based on the Quote Type, the “New OSA?” flag should display true or false.BIZ-50017</description>
    <label>New OSA</label>
    <type>Checkbox</type>
</CustomField>