force-app/main/default/objects/SBQQ__Quote__c/fields/New_vs_Old_Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>New_vs_Old_Payment_Term__c</fullName>
    <label>New vs. Old Payment Term</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Payment Terms</fullName>
                <default>true</default>
                <label>New Payment Terms</label>
            </value>
            <value>
                <fullName>Old Payment Term</fullName>
                <isActive>false</isActive>
                <label>Old Payment Term</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>