force-app/main/default/objects/SBQQ__Quote__c/fields/Non_Standard_Approvals__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Approvals__c</fullName>
    <description>Created for BIZ-47133
To display Non Standard approval reason in LWC</description>
    <formula>IF((NOT(ISPICKVAL(ROR__c,&apos;&apos;))||Development_Obligation__c = true||Platform_Conversion__c = true||Non_Standard_Packaging_Structure__c = true||Termination_with_Cancellation_Fee__c=true),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non Standard Approvals</label>
    <type>Checkbox</type>
</CustomField>