force-app/main/default/objects/SBQQ__Quote__c/fields/Non_Standard_Cloud_Location_this_deal__c.field-meta.xml
<CustomField>
    <fullName>Non_Standard_Cloud_Location_this_deal__c</fullName>
    <label>Non-Standard Cloud Location - this deal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>CAN</fullName>
            </value>
            <value>
                <fullName>EU</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>