force-app/main/default/objects/SBQQ__Quote__c/fields/Non_standard_Level__c.field-meta.xml
<CustomField>
    <fullName>Non_standard_Level__c</fullName>
    <description>Created for BIZ-47133
To display Non Standard approval reason in LWC</description>
    <formula>IF((NOT(ISPICKVAL(ROR__c,&apos;&apos;))||(Platform_Conversion__c=true)&amp;&amp; (Development_Obligation__c = false||Non_Standard_Packaging_Structure__c = false)),3,
IF(Development_Obligation__c = true,9,
IF(Non_Standard_Packaging_Structure__c = true, 10, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Non standard Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>