force-app/main/default/objects/SBQQ__Quote__c/fields/NS_Order_Category__c.field-meta.xml
<CustomField>
    <fullName>NS_Order_Category__c</fullName>
    <description>BIZ-50905</description>
    <label>NS Order Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NS_Order_Category</valueSetName>
    </valueSet>
</CustomField>