force-app/main/default/objects/SBQQ__Quote__c/fields/omit_cloud_add_attachment__c.field-meta.xml
<CustomField>
    <fullName>omit_cloud_add_attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Omit cloud add attachment</label>
    <type>Checkbox</type>
</CustomField>