force-app/main/default/objects/SBQQ__Quote__c/fields/On_Prem_Multi_year_product__c.field-meta.xml
<CustomField>
    <fullName>On_Prem_Multi_year_product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created as a part of story BIZ-47951
User for product related approval</description>
    <label>On Prem(Multi year product)</label>
    <type>Checkbox</type>
</CustomField>