force-app/main/default/objects/SBQQ__Quote__c/fields/On_Prem_New_product__c.field-meta.xml
<CustomField>
    <fullName>On_Prem_New_product__c</fullName>
    <description>Created as a part of story BIZ-47951
User for product related approval</description>
    <formula>IF((Product_Line_Deployment__c = true) &amp;&amp; (ISPICKVAL(Deal_Type__c,&apos;New Software&apos;)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On Prem- New product</label>
    <type>Checkbox</type>
</CustomField>