force-app/main/default/objects/SBQQ__Quote__c/fields/OP4i_Deal_Id_Formula__c.field-meta.xml
<CustomField>
    <fullName>OP4i_Deal_Id_Formula__c</fullName>
    <description>BIZ-49550: Formula to calculate OP4I Deal Id from Opportunity</description>
    <formula>SBQQ__Opportunity2__r.OP4I_Deal_Id__c</formula>
    <label>OP4i Deal Id Formula</label>
    <type>Text</type>
</CustomField>