force-app/main/default/objects/SBQQ__Quote__c/fields/OP4I_Deal_Name__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Deal_Name__c</fullName>
    <label>OP4I Deal Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>