force-app/main/default/objects/SBQQ__Quote__c/fields/OP4I_Deal_Owner__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Deal_Owner__c</fullName>
    <formula>SBQQ__Opportunity2__r.OP4I_Deal_Owner__c</formula>
    <label>OP4I Deal Owner</label>
    <type>Text</type>
</CustomField>