force-app/main/default/objects/SBQQ__Quote__c/fields/OP4I_Deal_Synced__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Deal_Synced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OP4I Deal Synced</label>
    <type>Checkbox</type>
</CustomField>