force-app/main/default/objects/SBQQ__Quote__c/fields/OP4I_OSA_Request_Received__c.field-meta.xml
<CustomField>
    <fullName>OP4I_OSA_Request_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>BIZ-201</description>
    <label>OP4I OSA Request Received</label>
    <type>Checkbox</type>
</CustomField>