force-app/main/default/objects/SBQQ__Quote__c/fields/OP4I_Quote_URL__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Quote_URL__c</fullName>
    <formula>&quot;https://op4i2-sand.oneplace.intapp.com/portal/pages/68/reports/708/entries/&quot;&amp;  TEXT(Intapp_Quote_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OP4I Quote URL</label>
    <type>Text</type>
</CustomField>