force-app/main/default/objects/SBQQ__Quote__c/fields/OP4I_Sales_Segment__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Sales_Segment__c</fullName>
    <description>Holds the Sales Segment Values from OP4I Deal</description>
    <label>OP4I Sales Segment</label>
    <length>50</length>
    <type>Text</type>
</CustomField>