force-app/main/default/objects/SBQQ__Quote__c/fields/OP4I_Status__c.field-meta.xml
<CustomField>
    <fullName>OP4I_Status__c</fullName>
    <defaultValue>&quot;Not Synced&quot;</defaultValue>
    <label>OP4I Status</label>
    <type>TextArea</type>
</CustomField>