force-app/main/default/objects/SBQQ__Quote__c/fields/OP4IDealID__c.field-meta.xml
<CustomField>
    <fullName>OP4IDealID__c</fullName>
    <description>This is a reference ID of Deal ID</description>
    <externalId>true</externalId>
    <label>OP4I Deal ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>