force-app/main/default/objects/SBQQ__Quote__c/fields/OSA_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>OSA_Auto_Number__c</fullName>
    <description>This field will represent OSA Auto-Number. Created as part of BIZ-47720 &amp; Updated as part of BIZ-48699</description>
    <displayFormat>{00000}</displayFormat>
    <label>OSA Auto-Number</label>
    <type>AutoNumber</type>
</CustomField>