force-app/main/default/objects/SBQQ__Quote__c/fields/OSA_Instructions__c.field-meta.xml
<CustomField>
    <fullName>OSA_Instructions__c</fullName>
    <description>BIZ-45116</description>
    <label>OSA Instructions</label>
    <type>TextArea</type>
</CustomField>