force-app/main/default/objects/SBQQ__Quote__c/fields/Outstanding_Balance_Services__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Balance_Services__c</fullName>
    <label>Outstanding Balance - Services</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>