force-app/main/default/objects/SBQQ__Quote__c/fields/Partner_Related__c.field-meta.xml
<CustomField>
    <fullName>Partner_Related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Related</label>
    <type>Checkbox</type>
</CustomField>