force-app/main/default/objects/SBQQ__Quote__c/fields/Payment_Term_Approver_Level__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Approver_Level__c</fullName>
    <formula>Combinepaymentterm__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Term Approver Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>