force-app/main/default/objects/SBQQ__Quote__c/fields/Payment_term_level_exception__c.field-meta.xml
<CustomField>
    <fullName>Payment_term_level_exception__c</fullName>
    <description>Created for additional change to display others for lwc
BIZ-50270</description>
    <formula>MAX(IF(TEXT(Renewal_Payment_Terms__c) = &apos;Net 30&apos;,0,
IF(TEXT(Renewal_Payment_Terms__c) = &apos;Net 45&apos; &amp;&amp; (ACV_Change_Year_1__c &gt; 10000),1,
IF((TEXT(Renewal_Payment_Terms__c) = &apos;Net 45&apos;|| TEXT(Renewal_Payment_Terms__c) = &apos;Net 60&apos; || TEXT(Renewal_Payment_Terms__c) = &apos;Net 90&apos;) &amp;&amp; (ACV_Change_Year_1__c &lt; 10000),1,
IF(TEXT(Renewal_Payment_Terms__c) = &apos;Net 60&apos; || TEXT(Renewal_Payment_Terms__c) = &apos;Net 90&apos;,2,
IF(TEXT(Renewal_Payment_Terms__c) = &apos;Net 120&apos;,8,
IF(NOT(ISBLANK(Custom_Software_Payment_Term__c)),11,0)
)))
)),IF((Payment_Term_Software__c) = &apos;Net 30&apos;,0,
IF((Payment_Term_Software__c) = &apos;Net 45&apos; &amp;&amp; (ACV_Change_Year_1__c &gt; 10000),1,
IF(((Payment_Term_Software__c) = &apos;Net 45&apos;|| (Payment_Term_Software__c) = &apos;Net 60&apos; || (Payment_Term_Software__c) = &apos;Net 90&apos;) &amp;&amp; (ACV_Change_Year_1__c &lt; 10000),1,
IF((Payment_Term_Software__c) = &apos;Net 60&apos; || (Payment_Term_Software__c) = &apos;Net 90&apos;,2,
IF((Payment_Term_Software__c) = &apos;Net 120&apos;,8,
IF(NOT(ISBLANK(Custom_Software_Payment_Term__c)),11,0)
)))
)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment term level(exception)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>