force-app/main/default/objects/SBQQ__Quote__c/fields/Payment_Term_Software__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Software__c</fullName>
    <formula>IF(ISPICKVAL(Software_Payment_Terms__c, &apos;Other&apos;) , &apos;XXXX&apos;, TEXT(Software_Payment_Terms__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Term Software</label>
    <type>Text</type>
</CustomField>