force-app/main/default/objects/SBQQ__Quote__c/fields/Pending_Governance_Fr__c.field-meta.xml
<CustomField>
    <fullName>Pending_Governance_Fr__c</fullName>
    <description>Fields to check if any of the 5 account is nor verification approved</description>
    <formula>NOT(ISPICKVAL(SBQQ__Account__r.Status__c, &apos;Verification Approved&apos;)) ||
NOT(ISPICKVAL(Bill_To_Account__r.Status__c, &apos;Verification Approved&apos;)) || 
NOT(ISPICKVAL(Ship_To_Account__r.Status__c , &apos;Verification Approved&apos;)) || 
NOT(ISPICKVAL(Bill_To_Address__r.Status__c, &apos;Verification Approved&apos;)) || 
NOT(ISPICKVAL( Ship_To_Address__r.Status__c, &apos;Verification Approved&apos;))</formula>
    <label>Pending Governance Fr</label>
    <type>Checkbox</type>
</CustomField>