force-app/main/default/objects/SBQQ__Quote__c/fields/Platform_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Platform_Conversion__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick when customer is moving a product from on-prem to cloud, or cloud to on-prem</inlineHelpText>
    <label>Platform Conversion</label>
    <type>Checkbox</type>
</CustomField>