force-app/main/default/objects/SBQQ__Quote__c/fields/Platform_Conversion_Count__c.field-meta.xml
<CustomField>
    <fullName>Platform_Conversion_Count__c</fullName>
    <label>Platform Conversion Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>