force-app/main/default/objects/SBQQ__Quote__c/fields/Premium_Support_Quote_Term__c.field-meta.xml
<CustomField>
    <fullName>Premium_Support_Quote_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is created to separate the process of pulling in Quote Term 3900 from the process of pulling the attachment.</description>
    <label>Premium Support Quote Term</label>
    <type>Checkbox</type>
</CustomField>